--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <base href="/" />
-    <title>Angular 2/5 User Registration and Login Example</title>
+    <title>Freez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- bootstrap css -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
+    <link red="icon" type="image/x-icon" href="./assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/script" src="./app/main/particle.js"></script>
+    <script type="text/script" src="./app/main/partic.js"></script>
+
 </head>
+
 <body>
-    <app>Loading...</app>
+    <app></app>
 </body>
+
 </html>
